--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8080
 
-spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs1
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs1?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username = AndriiRoot
+spring.datasource.password = root2311
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
+spring.liquibase.change-log = classpath:db/liquibase-changelog.xml
