add relation to DB and install map struct

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs1
+spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs
 spring.datasource.username = root
 spring.datasource.password = root
 
