--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
-spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs
+spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs?serverTimezone=UTC&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 123456
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
