--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,12 @@ spring.datasource.password = root2311
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=easyrepairsofficial@gmail.com
+spring.mail.password=qwert123Z
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.liquibase.change-log = classpath:db/liquibase-changelog.xml
