--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 server.port=8080
 spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs23?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username = AndriiRoot
-spring.datasource.password = root2311
+spring.datasource.username = root
+spring.datasource.password = admin
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
