--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 server.port=8080
 spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs23?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username = AndriiRoot
-spring.datasource.password = root2311
+spring.datasource.username = root
+spring.datasource.password = root
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-
 spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
+
+#gmail smtp connection
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=easyrepairsofficial@gmail.com
