--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 server.port=8080
-spring.datasource.url = jdbc:mysql://remotemysql.com:3306/w3u0qr3JI7?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username = w3u0qr3JI7
-spring.datasource.password = bSUtEySMto
+spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs23?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = root
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
