--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 server.port=8080
-spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs23?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 123456
 
