--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>2.1.5.RELEASE</version>
         </dependency>
+        <!--In memory db-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
