--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 server.port=8080
-spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = 1234
+spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs?createDatabaseIfNotExist=true&useEncoding=true&characterEncoding=UTF-8&autoReconnect=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
+spring.datasource.username = root
+spring.datasource.password = admin
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=
 spring.mail.username=easyrepairsofficial@gmail.com
 spring.mail.password=qwert123Z
 spring.mail.properties.mail.smtp.auth=true
