--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,3 +16,4 @@ spring.mail.username=easyrepairsofficial@gmail.com
 spring.mail.password=qwert123Z
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+hostlink="http://localhost:8080"
