--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 server.port=8080
 spring.datasource.url = jdbc:mysql://localhost:3306/easyrepairs?createDatabaseIfNotExist=true&useEncoding=true&characterEncoding=UTF-8&autoReconnect=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 123456
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
