--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.datasource.driverClassName=org.h2.Driver
 server.port=8080
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:easyrepairs
 spring.datasource.username=sa
 spring.datasource.password=
 
