Change way to work with files during creating contract, change exception logic during creating contract

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,6 +14,6 @@ spring.mail.password=qwert123Z
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 hostlink=http://localhost:4200
-contract.template = templates/ContractTemplate.pdf
+contract.template = /ContractTemplate.pdf
 contract.folder = contracts
-contract.path = contracts/
+contract.template_folder = templates
