Add folder contracts

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,6 +19,6 @@ spring.mail.password=qwert123Z
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 hostlink=https://easyrepairsangular.herokuapp.com
-contract.template = /ContractTemplate.pdf
+contract.template = ContractTemplate.pdf
 contract.folder = contracts
-contract.template_folder = templates
+contract.template_folder = resources/templates
