--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,6 +14,5 @@ spring.mail.password=qwert123Z
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 hostlink=http://localhost:4200
-contract.template = /ContractTemplate.pdf
+contract.template = ContractTemplate.pdf
 contract.folder = contracts
-contract.template_folder = templates
